Refactor CategoryRound and GameState to enhance game outcome management and support multiple answers